--- a/wp-content/themes/hotelmaster-v2-04/stylesheet/style-custom.css
+++ b/wp-content/themes/hotelmaster-v2-04/stylesheet/style-custom.css
@@ -223,22 +223,22 @@ body .nivo-directionNav a, body .flex-direction-nav a, body .flex-direction-nav 
 .gdlr-item-title-wrapper .gdlr-flex-prev:hover, .gdlr-item-title-wrapper .gdlr-flex-next:hover{ color: #ffffff; }
 input[type="text"], input[type="email"], input[type="password"], textarea, .gdlr-hotel-availability .gdlr-combobox-wrapper{ background-color: #f5f5f5; }
 input[type="text"], input[type="email"], input[type="password"], textarea, .gdlr-hotel-availability .gdlr-combobox-wrapper select{ color: #828282; }input::input-placeholder{ color:#828282; } input::-webkit-input-placeholder{ color:#828282; }input::-moz-placeholder{ color:#828282; } input:-moz-placeholder{ color:#828282; }input:-ms-input-placeholder{ color:#828282; }textarea::input-placeholder{ color:#828282; } textarea::-webkit-input-placeholder{ color:#828282; }textarea::-moz-placeholder{ color:#828282; } textarea:-moz-placeholder{ color:#828282; }textarea:-ms-input-placeholder{ color:#828282; }
-.footer-wrapper{ background-color: #1e1e1e; }
+.footer-wrapper{ background-color: #81d742; }
 .footer-wrapper .gdlr-widget-title, .footer-wrapper .gdlr-widget-title a{ color: #ffffff; }
-.footer-wrapper{ color: #999999; }
-.footer-wrapper a{ color: #6d6d6d; }
-.footer-wrapper a:hover{ color: #919191; }
-.footer-wrapper *{ border-color: #303030; }
+.footer-wrapper{ color: #f4f4f4; }
+.footer-wrapper a{ color: #ffffff; }
+.footer-wrapper a:hover{ color: #dd9933; }
+.footer-wrapper *{ border-color: #38a834; }
 .footer-wrapper input[type="text"], .footer-wrapper input[type="email"], .footer-wrapper input[type="password"], .footer-wrapper textarea{ background-color: #ffffff; }
 .footer-wrapper input[type="text"], .footer-wrapper input[type="email"], .footer-wrapper input[type="password"], .footer-wrapper textarea{ color: #828282; }
 .footer-wrapper input[type="text"], .footer-wrapper input[type="email"], .footer-wrapper input[type="password"], .footer-wrapper textarea{ border-color: #313131; }
 .footer-wrapper .gdlr-button, .footer-wrapper .gdlr-button:hover, .footer-wrapper input[type="button"], .footer-wrapper input[type="submit"]{ color: #ffffff; }
-.footer-wrapper .gdlr-button, .footer-wrapper input[type="button"], .footer-wrapper input[type="submit"]{ background-color: #ff8432; }
-.footer-wrapper .tagcloud a{ background-color: #ff8432; }
+.footer-wrapper .gdlr-button, .footer-wrapper input[type="button"], .footer-wrapper input[type="submit"]{ background-color: #1e73be; }
+.footer-wrapper .tagcloud a{ background-color: #eeee22; }
 .footer-wrapper .tagcloud a, .footer-wrapper .tagcloud a:hover{ color: #ffffff; }
-.copyright-wrapper{ background-color: #0f0f0f; }
-.copyright-wrapper{ color: #828282; }
-.footer-wrapper .copyright-wrapper{ border-color: #0f0f0f; }
+.copyright-wrapper{ background-color: #8e8e8e; }
+.copyright-wrapper{ color: #f7f7f7; }
+.footer-wrapper .copyright-wrapper{ border-color: #c6c6c6; }
 html  .woocommerce span.onsale, html  .woocommerce-page span.onsale, html .woocommerce-message,html .woocommerce div.product .woocommerce-tabs ul.tabs li.active, html .woocommerce #content div.product .woocommerce-tabs ul.tabs li.active,html .woocommerce-page div.product .woocommerce-tabs ul.tabs li.active, html .woocommerce-page #content div.product .woocommerce-tabs ul.tabs li.active {  background: #b89f80; }html .woocommerce .star-rating, html .woocommerce-page .star-rating, html .woocommerce .star-rating:before, html .woocommerce-page .star-rating:before, html .woocommerce div.product span.price, html .woocommerce div.product p.price, html .woocommerce #content div.product span.price, html .woocommerce #content div.product p.price, html .woocommerce-page div.product span.price, html .woocommerce-page div.product p.price, html .woocommerce-page #content div.product span.price, html .woocommerce-page #content div.product p.price {color: #b89f80; }
 html .woocommerce-message  a.button, html .woocommerce-error  a.button, html .woocommerce-info  a.button, html .woocommerce-message, html .woocommerce-error, html .woocommerce-info, html  .woocommerce span.onsale, html  .woocommerce-page span.onsale, html .woocommerce div.product .woocommerce-tabs ul.tabs li.active,html .woocommerce #content div.product .woocommerce-tabs ul.tabs li.active, html .woocommerce-page div.product .woocommerce-tabs ul.tabs li.active, html .woocommerce-page #content div.product .woocommerce-tabs ul.tabs li.active, html .woocommerce nav.woocommerce-pagination ul li span.current, html .woocommerce-page nav.woocommerce-pagination ul li span.current, html .woocommercenav.woocommerce-pagination ul li a:hover, html .woocommerce-page nav.woocommerce-pagination ul li a:hover{ color: #ffffff; }
 html .woocommerce-info{ background: #389EC5; }
