--- a/wp-content/themes/hotelmaster-v2-04/style.css
+++ b/wp-content/themes/hotelmaster-v2-04/style.css
@@ -1426,3 +1426,7 @@ only screen and (-webkit-min-device-pixel-ratio: 2), only screen and (min-device
 	.gdlr-hotel-availability input.gdlr-datepicker:focus,
 	select:focus, textarea:focus, input:focus { font-size: 16px; }
 }
+
+.footer-wrapper .gdlr-icon {
+  color:#fff!important;
+}
