--- a/wp-content/themes/hotelmaster-v2-04/stylesheet/style-custom.css
+++ b/wp-content/themes/hotelmaster-v2-04/stylesheet/style-custom.css
@@ -35,10 +35,11 @@ h6{ font-size: 16px; }
 .gdlr-main-menu > li > .sub-menu *, .gdlr-main-menu > li > .sf-mega *{ border-color: #373737; }
 .gdlr-main-menu > li > .sf-mega .sf-mega-section-inner > a { color: #ffffff; }
 .gdlr-main-menu > li > .sf-mega .sf-mega-section-inner > a:hover, .gdlr-main-menu > li > .sf-mega .sf-mega-section-inner.current-menu-item > a, .gdlr-main-menu > li > .sf-mega .sf-mega-section-inner.current-menu-ancestor > a { color: #ffffff; }
-#gdlr-responsive-navigation.dl-menuwrapper button { background-color: #cccccc; }
-#gdlr-responsive-navigation.dl-menuwrapper button:hover, #gdlr-responsive-navigation.dl-menuwrapper button.dl-active, #gdlr-responsive-navigation.dl-menuwrapper ul{ background-color: orange; }
+#gdlr-responsive-navigation.dl-menuwrapper button:hover { background-color: orangered; }
+#gdlr-responsive-navigation.dl-menuwrapper, button #gdlr-responsive-navigation.dl-menuwrapper button.dl-active,
+#gdlr-responsive-navigation.dl-menuwrapper ul{background-color: orange;}
 .gdlr-menu-search{ background: #2b2b2b; background: rgba(43, 43, 43, 0.8); }
-body{ background-color: #dddddd; }
+body{ background-color: #eee; }
 .body-wrapper, .gdlr-single-lightbox-container{ background-color: #ffffff; }
 .gdlr-page-title, .gdlr-page-title-gimmick{ color: #232323; }
 .gdlr-page-caption{ color: #ff8432; }
@@ -316,6 +317,10 @@ html .woocommerce .quantity .minus, html .woocommerce #content .quantity .minus,
     min-height: 180px;
 }
 .gdlr-page-title-wrapper .gdlr-page-title-overlay {  
-    opacity: 0.4 !important;
-    filter: alpha(opacity=0.4) !important;
+    opacity: 0.2 !important;
+    filter: alpha(opacity=0.2) !important;
+}
+
+.dl-menuwrapper button {
+    background: orange;
 }
